@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/25/2017
+  * added path_convention
+
 * 4/18/2017
   * added subDeleter
 
